# snacman

./: .gitignore  CMakeLists.txt  README.md
include/: canvas.hpp  eHandler.hpp  entity.hpp  font_render.hpp  math.hpp  sound.hpp  utils.hpp
src/: canvas.cpp  eHandler.cpp  entity.cpp  font_render.cpp  main.cpp  math.cpp  sound.cpp  utils.hpp
